# fanfei

./: .gitignore  .gitmodules
agg/first/: CMakeLists.txt  main.cpp  readme
asio_test/: CMakeLists.txt  main.cpp
asio_test/basic_skill/: CMakeLists.txt  main.cpp
asio_test/boost/asio/impl/: error.ipp
asio_test/sockets/: CMakeLists.txt  main.cpp
asio_test/sockets/boost/boost/: readme.txt
cocos2d-x/HelloWorld/: Makefile  cocos2dx.mk  main.cpp  readme.txt
dp/AbstractFactory/: AbstractFactory.cpp  CMakeLists.txt
dp/Builder/: CMakeLists.txt  builder.cpp
dp/Decorate/: CMakeLists.txt  Decorate.cpp
dp/FactoryMethod/: CMakeLists.txt  FactoryMethod.cpp
dp/Mediator/: CMakeLists.txt  mediator.cpp
dp/Memento/: CMakeLists.txt  memento.cpp
dp/Observer/: CMakeLists.txt  observer.cpp
dp/Proxy/: CMakeLists.txt  proxy.cpp
dp/StaticFactoryMethod/: CMakeLists.txt  StaticFactoryMethod.cpp
dp/Strategy/: CMakeLists.txt  Strategy.cpp
dp/adaptee/: CMakeLists.txt  adaptee.cpp
dp/adapter/: CMakeLists.txt  adapter.cpp
dp/bridge/: CMakeLists.txt  bridge.cpp
dp/combination/: CMakeLists.txt  combination.cpp
dp/command/: CMakeLists.txt  command.cpp
dp/facade/: CMakeLists.txt  facade.cpp  internal.cmake
dp/flyweight/: CMakeLists.txt  flyweight.cpp
dp/interpreter/: CMakeLists.txt  interpreter.cpp
dp/prototype/: CMakeLists.txt  prototype.cpp
dp/responsibility/: CMakeLists.txt  responsibility.cpp
dp/state/: CMakeLists.txt  state.cpp
dp/template/: CMakeLists.txt  template.cpp
dp/visitor/: CMakeLists.txt  visitor.cpp
ds/LinearList/Array/: Array.cpp  CMakeLists.txt
ds/LinearList/NumericConversion/: ADTStack.h  CMakeLists.txt  main.cpp
ds/LinearList/ParenthesisMatching/: CMakeLists.txt  main.cpp
ds/LinearList/SequenceList/: ADTList.h  CMakeLists.txt  main.cpp
ds/LinearList/kmp/: CMakeLists.txt  kmp.cpp  my_string.h
ds/LinearList/polynomial/: CMakeLists.txt  polynomial.cpp
ds/LinearList/stack/: ADTStack.h  CMakeLists.txt  main.cpp
ds/sort/: binsert_sort.cpp  insert_sort.cpp  quick_sort.cpp  select_sort.cpp
ds/tree/binary_tree/: ADTStack.h  CMakeLists.txt  binary_tree.h  main.cpp
ds/tree/heap/: CMakeLists.txt  main.cpp
gflags_test/: CMakeLists.txt  main.cpp
gflags_test/gflags/: CMakeLists.txt  util.h
gflags_test/gflags/linux/: config.h
gflags_test/gflags/linux/gflags/: gflags.h  gflags_declare.h
gflags_test/gflags/windows/gflags/: gflags.h
gtk/gtk_full_screen/: CMakeLists.txt  full_screen.cpp
gtk/gtk_helloworld/: CMakeLists.txt  hello_world.cpp
gtk/gtk_screen_capture/: dialogflow.cpp  dialogflow.h  flow.h  screen_capture.kdev4  screen_capture_authmap.h  screen_capture_controller.h  screen_capture_event.cpp  screen_capture_event.h  screen_capture_model.h  screen_capture_type.h
gtk_screen_capture/: CMakeLists.txt  dialogflow.cpp  flow.cpp  flow.h  main.cpp  mainflow.cpp  mainflow.h  screen_capture_controller.cpp  screen_capture_controller.h  screen_capture_event.h  screen_capture_model.cpp  screen_capture_model.h  screen_capture_snatch_view.cpp  screen_capture_snatch_view.h  screen_capture_type.cpp
hippo/hippo/: AccountBook.h  AccountBook.m  AddViewController.h  AddViewController.m  AppDelegate.h  AppDelegate.m  DataBaseManager.h  DataBaseManager.m  Entity.h  Entity.m  Info.plist  PathProvider.h  PathProvider.m  ViewController.h  ViewController.m  main.m
hippo/hippo.xcodeproj/: project.pbxproj
hippo/hippo.xcodeproj/project.xcworkspace/xcshareddata/: hippo.xccheckout
hippo/hippo.xcodeproj/project.xcworkspace/xcuserdata/fanfamily.xcuserdatad/: UserInterfaceState.xcuserstate
hippo/hippo.xcodeproj/xcuserdata/fanfamily.xcuserdatad/xcschemes/: hippo.xcscheme  xcschememanagement.plist
hippo/hippo/Base.lproj/: LaunchScreen.xib  Main.storyboard
hippo/hippoTests/: Info.plist  hippoTests.m
log4cplus_test/HelloWorld/: CMakeLists.txt  liblog4cplus.so.0  liblog4cplus.so.1.1.0  log4cplusUD.lib  main.cpp
log4cplus_test/HelloWorld/log4cplus/: CMakeLists.txt  socket-unix.cxx
pigeon/pigeon/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.m  main.m
pigeon/pigeon.xcodeproj/: project.pbxproj
pigeon/pigeon.xcodeproj/project.xcworkspace/xcshareddata/: pigeon.xccheckout
pigeon/pigeon/Base.lproj/: LaunchScreen.xib
pigeon/pigeonTests/: pigeonTests.m
pugixml_test/pugixml-1.2/: CMakeLists.txt  main.cpp
pugixml_test/pugixml-1.2/docs/samples/: CMakeLists.txt
pugixml_test/pugixml-1.2/src/: CMakeLists.txt
qt/: readme.txt
qt/UILayout/: box_layout.cpp  box_layout.h  box_layout_item.cpp  box_layout_item.h  boxlayout.h  button.h  fakes_button.h  fakes_factory.h  fakes_widget.h  fakes_window.h  hboxlayout.cpp  hboxlayout.h  layout.cpp  layout.h  layout_base_item.h  layout_item.cpp  layout_item.h  layout_item_capacity_alloc.h  layout_item_limited_size.h  layout_item_side_space.h  layout_space.h  linear_box_layout.cpp  linear_box_layout.h  linear_box_layout_item.cpp  linear_box_layout_item.h  main.cpp  timer.h  vboxlayout.cpp  vboxlayout.h  widget.cpp  widget.h  ywindow.h
qt/WebView/: CMakeLists.txt  main.cpp
qt/layout/: CMakeLists.txt
rapidjson/test/perftest/: CMakeLists.txt  gtest.lib  jsoncpptest.cpp  perftest.cpp  perftest.h  rapidjsontest.cpp  yajltest.cpp
rapidjson/test/perftest/cmake/: internal_utils.cmake  internal_utils.cmake~
sqlite3_test/: CMakeLists.txt  db_sqlite3.cpp  db_sqlite3.h
sqlite3_test/sqlite3/: CMakeLists.txt  sqlite3.h
windows/api/canvas/: CMakeLists.txt  main.cpp  resource.h
windows/api/canvas/canvas/: canvas.h
windows/api/canvas/window/: view.cpp  window.cpp
windows/api/core/01-ErrorShow/: CMakeLists.txt  ErrorShow.md
windows/api/dlg/: CMakeLists.txt  canvas.h  generic.rc  main.cpp
windows/api/dlg/dialog/: dialog.cpp  dialog.h  dialog_model.cpp  dialog_model.h  dialog_view.cpp  dialog_view.h
windows/api/dlg/window/: view.cpp  view.h  window.cpp  window.h
windows/api/generic/: CMakeLists.txt  controller.cpp  controller.h  generic.aps  generic.rc  main.cpp  model.cpp  model.h  res.h  resource.h  view.cpp  view.h
windows/api/winne/: CMakeLists.txt  winne.cpp
(+3 files in other folders)
